# sunflower

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  flake.nix  gallery.md  justfile  readme.md
.github/workflows/: build-artifacts.yml  client-verify.yml  format.yml
cli/: Cargo.toml
cli/src/: cmd_opt.rs  main.rs
client/: analysis_options.yaml  pubspec.yaml
client/android/: gradlew
client/android/app/: build.gradle
client/integration_test/: visual_smoke_test.dart
client/ios/Runner/: GeneratedPluginRegistrant.m  Info.plist
client/lib/: app.dart  main.dart
client/rust_builder/: README.md  pubspec.yaml
client/rust_builder/android/: build.gradle  settings.gradle
client/rust_builder/ios/: sunflower_bridge.podspec
client/rust_builder/linux/: CMakeLists.txt
client/rust_builder/macos/: sunflower_bridge.podspec
client/rust_builder/windows/: CMakeLists.txt
client/test/: auth_failure_test.dart  download_manager_test.dart  home_controller_test.dart  home_playback_routing_test.dart  local_core_test.dart  local_home_fallback_test.dart  local_radio_test.dart  lookahead_loader_test.dart  now_playing_socket_test.dart  playback_feedback_recorder_test.dart  replay_buffer_test.dart  songs_screen_test.dart  source_resolver_test.dart  sunflower_api_idempotency_test.dart  sunflower_api_models_test.dart  youtube_credentials_setting_test.dart
client/test/goldens/: downloads_golden_test.dart  flutter_test_config.dart  home_golden_test.dart  library_golden_test.dart  onboarding_golden_test.dart  player_golden_test.dart  search_golden_test.dart  settings_golden_test.dart
client/test_driver/: integration_test.dart
core/: Cargo.toml  README.md
core/src/player/: state.rs
core/src/provider/: ytdl.rs
core/src/utils/: mod.rs
daemon/: Cargo.toml  build.rs  readme.md
daemon/src/: .proto  lib.rs  main.rs  task_mgr.rs
daemon/src/daemon/: handler.rs  mod.rs
daemon/src/player/: _impl.rs  error.rs  impl.rs  mod.rs  state.rs  tests.rs
daemon/src/protocol/: request.rs  response.rs
daemon/src/provider/: error.rs  local_file.rs  mod.rs  sinewave.rs  tests.rs  ytdl.rs
daemon/src/provider/providers/: mod.rs  sine_wave.rs
daemon/src/provider/providers/yt_dlp/: helper.rs  providers.rs
daemon/src/provider/sources/: local_file.rs  mod.rs
daemon/src/source/: error.rs  local_file.rs  mod.rs  sinewave.rs
daemon/src/utils/: mod.rs  single_item_channel.rs  task_pool.rs
dev/: docker-compose.yml
docs/: player-implementation.md  recommendation-system.md
docs/superpowers/plans/: 2026-06-18-m3-innertube.md
docs/superpowers/specs/: 2026-06-18-m3-innertube-design.md
interface/: Cargo.toml
interface/src/: lib.rs  player.rs  provider.rs
plans/: README.md  architecture.md  client-verification-report.md  post-v1-visual-verification.md  risks.md
plans/milestones/: m0-server-bootstrap.md  m1-auth-and-library-ingestion.md  m10-admin-dashboard.md  m2-flutter-player-local-library.md  m3-innertube-client.md  m4-next-endpoint-and-lookahead.md  m5-recommendation-pipeline.md  m6-offline-downloads.md  m7-sync-and-write-replay.md  m8-websocket-and-polish.md  m9-secure-enrollment.md
player/: Cargo.toml
player/src/: _impl.rs  error.rs  interface.rs  lib.rs  main.rs  tests.rs  track.rs
proto/: Cargo.toml  build.rs
proto/src/: .proto  lib.rs  proto.rs
provider/: Cargo.toml
provider/src/: error.rs  lib.rs  test.rs  tests.rs
provider/src/sources/: local_file.rs  mod.rs  sine_wave.rs
rust/: Cargo.toml
rust/crates/sunflower-bridge/: Cargo.toml  cargokit.yaml
rust/crates/sunflower-bridge/src/: api.rs  frb_generated.rs  lib.rs
rust/crates/sunflower-core/: Cargo.toml
rust/crates/sunflower-core/src/: lib.rs  models.rs  queue.rs  recommendation.rs  repository.rs  wire.rs
rust/crates/sunflower-server/: Cargo.toml
rust/crates/sunflower-server/assets/admin/: admin.css
rust/crates/sunflower-server/src/: auth.rs  cookies.rs  file_response.rs  forms.rs  innertube.rs  jobs.rs  legacy_http.rs  main.rs  now_playing.rs  router.rs  runtime.rs  state.rs  stream_proxy.rs  test_support.rs  tests.rs
rust/crates/sunflower-server/src/routes/: admin.rs  device_auth.rs  downloads.rs  events.rs  home.rs  library.rs  mod.rs  now_playing.rs  playlists.rs  queue.rs  search.rs  setup.rs  streams.rs
rust/crates/sunflower-storage-postgres/: Cargo.toml
rust/crates/sunflower-storage-postgres/migrations/: 0001_init.sql  0003_queue.sql  0004_sync.sql  0005_song_local_path.sql  0007_secure_enrollment.sql  0008_event_idempotency.sql  0009_idempotency_response.sql
rust/crates/sunflower-storage-postgres/src/: lib.rs
rust/crates/sunflower-storage-sqlite/: Cargo.toml
rust/crates/sunflower-storage-sqlite/src/: lib.rs
scripts/: seed-demo.sh
server/: go.mod  go.sum  sqlc.yaml
server/cmd/probe/: innertube_cmd.go  main.go
server/cmd/sunflowerd/: main.go  main_test.go
server/db/migrations/: 0002_events.sql  0004_sync.sql  0006_cookie_health.sql  embed.go
server/internal/adminui/: embed.go
server/internal/api/: admin_data.go  handlers_admin_auth.go  handlers_admin_html.go  handlers_admin_json.go  handlers_auth.go  handlers_cookies.go  handlers_downloads.go  handlers_events.go  handlers_home.go  handlers_impressions.go  handlers_jobs.go  handlers_library.go  handlers_likes.go  handlers_next.go  handlers_playlists.go  handlers_queue.go  handlers_search.go  handlers_search_test.go  handlers_setup.go  handlers_streams.go  handlers_ws.go  integration_m4_test.go  integration_m5_test.go  integration_m6_test.go  (+7 more)
src/: lib.rs  main.rs
src/player/: _impl.rs  error.rs  main.rs  mod.rs  tests.rs  track.rs
src/provider/: error.rs  lib.rs  mod.rs  tests.rs
sunflower-core/: Cargo.toml  build.rs  protocol.proto
sunflower-core/src/: lib.rs  server.rs
sunflower-core/src/daemon/: grpc_server.rs  handler.rs  mod.rs
sunflower-core/src/player/: impl.rs  state.rs
sunflower-core/src/protocol/: mod.rs  request.rs
sunflower-core/src/provider/: local_file.rs  mod.rs  ytdl.rs
sunflower-core/src/source/: local_file.rs  mod.rs
sunflower-core/src/utils/: file_searcher.rs  mod.rs
(+198 files in other folders)
