[package]
name = "sunflower-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
sunflower-daemon-proto = { path = "../proto" }
tracing-subscriber = "0.3"
anyhow = "1.0.93"
clap = { version = "4.5.20", features = ["derive"] }
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }