[package]
name = "sunflower-player-interface"
version = "0.1.0"
edition = "2021"

[dependencies]
oneshot = "0.1"
sunflower-player = { path = "../player" }
thiserror = "1.0.65"
tracing = "0.1"

sunflower-provider = { path = "../provider", default-features = false }

[features]
"provider.local" = ["sunflower-provider/local"]
