[package]
name = "sunflower-player"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
rodio = { version = "0.19.0", features = ["symphonia-all"] }
symphonia = "0.5.4"
thiserror = "1.0.65"
tracing = "0.1"

oneshot = { version = "0.1", optional = true }

[dev-dependencies]
tracing-subscriber = "0.3"
anyhow = "1.0.58"


[features]
interface = ["dep:oneshot"]
low_level = []
default = ["interface"]
