[package]
name = "sunflower-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.65"
tracing = "0.1"
rodio = "0.19"
sunflower-player = { path = "../player", no-default-features = true, features = [
    "low-level",
] }

regex = { version = "1.5.5", optional = true }
lofty = { version = "0.21", optional = true }

[dev-dependencies]
tracing-subscriber = "0.3"
anyhow = "1.0.58"


[features]
local = ["dep:lofty", "dep:regex"]
yt-dl = ["local"]

default = ["local", "yt-dl"]
