[package]
name = "sunflower-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"
license = "AGPL-3"
authors = ["Brian Duan <iceice666@outlook.com>"]
description = "Sunflower daemon player implementation."

[dependencies]
# Audio
rodio = { version = "0.20", features = ["symphonia-all"] }
symphonia = "0.5.4"
lofty = { version = "0.21", optional = true }

# Async & Concurrency
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1.83"
parking_lot = "0.12.3"

# Error handling
anyhow = "1.0.93"
thiserror = "2.0"

# Logging & Tracing
log = "0.4.22"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["time"] }

# Serialization
serde = { version = "1.0.215", features = ["derive"] }

# Data storage
rusqlite = { version = "0.32.0", features = ["bundled"] }

# Utilities
time = { version = "0.3.36", features = ["local-offset"] }
rand = "0.8.5"
regex = { version = "1.5.5", optional = true }
uuid = { version = "1.11", features = ["v4"] }
bytes = "1.0"
duct = "0.13.7"

[features]
default = ["provider-local_file"]
provider-all = ["provider-local_file", "provider-yt-dlp"]

# Individual providers
provider-local_file = ["dep:lofty", "dep:regex"]
provider-yt-dlp = []

