[package]
name = "sunflower-bridge"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
flutter_rust_bridge = "=2.12.0"
serde.workspace = true
serde_json.workspace = true
sunflower-core = { path = "../sunflower-core" }
sunflower-storage-sqlite = { path = "../sunflower-storage-sqlite" }
uuid.workspace = true
