[package]
name = "sunflower-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "sunflowerd-rs"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
futures-util.workspace = true
image.workspace = true
rand.workspace = true
reqwest.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
sunflower-core = { path = "../sunflower-core" }
sunflower-storage-postgres = { path = "../sunflower-storage-postgres" }
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
sqlx.workspace = true
tokio-tungstenite = "0.24"
tower.workspace = true
