[package]
name = "sunflower-storage-postgres"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
argon2.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
crypto_secretbox.workspace = true
rand.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
sunflower-core = { path = "../sunflower-core" }
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
