[package]
name = "sunflower-storage-sqlite"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
sunflower-core = { path = "../sunflower-core" }
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
